# kernel4

./: .gitignore  CMakeLists.txt  Makefile  MemMap  README.md  bochsrc  gen_syms.sh  iso.sh
acpi/: CMakeLists.txt
acpi/source/components/dispatcher/: sources.cmake
acpi/source/components/events/: sources.cmake
acpi/source/components/executer/: sources.cmake
acpi/source/components/hardware/: sources.cmake
acpi/source/components/namespace/: sources.cmake
acpi/source/components/parser/: sources.cmake
acpi/source/components/resources/: sources.cmake
acpi/source/components/tables/: sources.cmake
acpi/source/components/utilities/: sources.cmake
acpi/source/include/: acconfig.h
acpi/source/include/platform/: acenv.h  acenvex.h  ackern4.h
config/: vars.sh
initrd/files/: i_am_a_very_long_filename_to_test_the_longest_names_possible_and_achieveable_in_the_tar_format.txt
initrd/files/blorg/: helloworld.txt
kernel/: CMakeLists.txt  Makefile
kernel/arch/i386/: hal.c  idt.c  isr_entry.S  linker.ld  make.config  mm.c  mmu.c  pic.c  pit.c  syscall.c  uart_io.c  vga.c
kernel/arch/i386/boot/: boot.S
kernel/arch/i386/include/: stack_state.h  types.h
kernel/arch/i386/include/arch/: iobase.h
kernel/arch/i386/io/: ps2.c
kernel/arch/i386/tasks/: switch_stack.S  tasks.c
kernel/arch/x86/: CMakeLists.txt  apic.c  cpufuncs.c  hal.c  make.config  pcspkr.c  pic.c  pit.c  syscall.c  vga.c
kernel/arch/x86/include/arch/: apic.h  cpufuncs.h  elf.h  idt.h  io.h  msr.h  pic.h  pit.h
kernel/arch/x86/io/: io.c  pci_io.c  ps2.c
kernel/arch/x86_64/: hal.c  idt.c  isr_entry.S  linker.ld  make.config  mm.c  mmu.c  pic.c  pit.c  syscall.c  uart.c  uart_io.c  vga.c
kernel/arch/x86_64/boot/: boot.S  bootstrap.S
kernel/arch/x86_64/include/: stack_state.h  types.h
kernel/arch/x86_64/include/arch/: iobase.h
kernel/arch/x86_64/io/: ps2.c
kernel/arch/x86_64/tasks/: switch_stack.S  tasks.c
kernel/core/: elf.c  fork.c  kernel.c  khooks.c  make.config  mm.c  multiboot.c  syscall.c
kernel/core/acpi/: acpi.c  ec.c  osl.c
kernel/core/ata/: ata.c  pata.c
kernel/core/fs/: file_ops.c  filedesc.c  generic_iops.c  tarfs.c  ttyfs.c  vfs.c
kernel/core/hal/: timer.c
kernel/core/io/: atkbd.c  generickbd.c  keyboard.c  pci.c  ps2.c  ps2kbd.c  uart.c
kernel/core/ipc/: ipctest.c  message.c
kernel/core/kshell/: main.c
kernel/core/mm/: allochooks.c  liballoc.c  mm.c
kernel/core/tasks/: sched.c  tasks.c
kernel/core/tty/: fb_generic.c  font.c  tty.c
kernel/core/usb/: usbcore.c
kernel/core/util/: bitmap.c  klog.c  locks.c  panic.c
kernel/include/common/: acpi.h  elf.h  errno.h  fb.h  hal.h  kbd.h  keyboard.h  keycodes.h  kfuncs.h  liballoc.h  locks.h  mb2parse.h  mm.h  multiboot.h  multiboot2.h  ps2.h  sched.h  syscall.h  tarfs.h  tasks.h  tty.h  types.h  uart.h  vfs.h  vga.h
kernel/include/common/ata/: ata.h
kernel/include/common/fs/: filedesc.h  tarfs.h  ttyfs.h  vfs.h
kernel/include/common/hal/: timer.h
kernel/include/common/io/: kbd.h  keycodes.h  pci.h  ps2.h
kernel/include/common/ipc/: message.h
kernel/include/common/kshell/: kshell.h
kernel/include/common/mm/: mm.h
kernel/include/common/sched/: sched.h
kernel/include/common/tasks/: tasks.h
kernel/include/common/tty/: fb.h  tty.h
kernel/include/common/usb/: usb.h
kernel/include/common/util/: bitmap.h  kfuncs.h  klog.h  locks.h
kernel/include/i386/: idt.h  io.h  pic.h  pit.h  stack_state.h  types.h
kernel/include/x86/arch/: pic.h  pit.h
kernel/include/x86_64/: idt.h  io.h  pic.h  pit.h  stack_state.h  types.h
libk/: Makefile
libk/arch/i386/: crt0.S  crti.S  crtn.S  make.config
libk/arch/i386/include/: archtypes.h
libk/arch/x86_64/: crt0.S  make.config
libk/arch/x86_64/include/: archtypes.h
libk/ctype/: ctype.c
libk/include/: __commons.h  ctype.h  kernhooks.h  stdarg.h  stdio.h  stdlib.h  string.h  unistd.h
libk/include/sys/: types.h
libk/stdio/: printf.c  putchar.c  snprintf.c  sprintf.c  vprintf.c  vsnprintf.c  vsprintf.c
libk/stdlib/: abort.c  atoi.c  atol.c  exit.c  itoa.c  lltoa.c  strtoul.c  ulltoa.c  ultoa.c
libk/string/: memcmp.c  memcpy.c  memmove.c  memset.c  strcat.c  strchr.c  strcmp.c  strcpy.c  stricmp.c  strncat.c  strncmp.c  strncpy.c  strnicmp.c  strrchr.c  strspn.c  strstr.c  strtok_r.c  strupr.c
scripts/: build_arch.sh  build_arch_cmake.sh  find_line.sh  gen_initrd.sh  gen_iso.sh  list_initrd.sh
sysroot/blorg/aaa/bbb/: goat
sysroot/usr/src/test/: Makefile  test.S
sysroot/usr/src/test/arch/i386/: linker.ld
toolchains/: toolchain-cross.cmake
